--- a/AIML_Module_4_Lab_1_Perceptron.ipynb
+++ b/AIML_Module_4_Lab_1_Perceptron.ipynb
@@ -32,7 +32,7 @@
         "## Lab 1: Perceptron\n",
         "\n",
         "In this lab, we will be studying the perceptron learning algorithm.\n",
-        "\n"
+        " - **LAB WORK IS APPENDED TO THE MODULE AFTER THE \"THINGS TO TRY\" SECTION**\n"
       ],
       "metadata": {
         "id": "M3xEYaFTrNN8"
